--- a/interface/package.json
+++ b/interface/package.json
@@ -1,6 +1,7 @@
 {
   "name": "interface",
   "version": "0.1.0",
+  "homepage": "http://pogpvp.com",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.5.4",
@@ -27,11 +28,15 @@
     "react-tooltip": "^4.1.0",
     "react-transition-group": "1.x"
   },
+  "reactSnap": {
+    "sourceMaps": false,
+    "inlineCss": true
+  },
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run sitemap",
     "build": "react-scripts build",
-    "postbuild": "rimraf build/**/*.map",
+    "postbuild": "react-snap && rimraf build/**/*.map",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sitemap": "babel-node src/sitemap/generator.js"
@@ -55,6 +60,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "react-snap": "^1.23.0"
   }
 }
