--- a/interface/package.json
+++ b/interface/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react-transition-group": "^4.2.4",
     "bootstrap": "^4.4.1",
+    "css-split-webpack-plugin": "^0.2.6",
     "mdbreact": "^4.25.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
@@ -19,6 +20,7 @@
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
+    "react-lazy-images": "^1.1.0",
     "react-localization": "^1.0.15",
     "react-router-dom": "^5.1.2",
     "react-router-sitemap": "^1.2.0",
