--- a/interface/package.json
+++ b/interface/package.json
@@ -38,7 +38,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run sitemap",
     "build": "react-scripts build",
-    "postbuild": "react-snap && rimraf build/**/*.map",
+    "postbuild": "react-snap && rimraf build/**/*.map && rimraf build/images/*.md && rimraf build/images/.git",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sitemap": "babel-node src/sitemap/generator.js"
