--- a/interface/package.json
+++ b/interface/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.0.0",
     "react-lazy-images": "^1.1.0",
     "react-localization": "^1.0.15",
+    "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.1.2",
