--- a/interface/package.json
+++ b/interface/package.json
@@ -13,6 +13,7 @@
     "@types/react-transition-group": "^4.2.4",
     "bootstrap": "^4.4.1",
     "css-split-webpack-plugin": "^0.2.6",
+    "fingerprintjs2": "^2.1.0",
     "mdbreact": "^4.25.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
@@ -34,7 +35,8 @@
     "react-transition-group": "1.x",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sendsay-api": "^2.4.0"
+    "sendsay-api": "^2.4.0",
+    "ua-parser-js": "^0.7.21"
   },
   "reactSnap": {
     "sourceMaps": false,
