--- a/interface/package.json
+++ b/interface/package.json
@@ -34,6 +34,7 @@
     "react-tooltip": "^4.1.0",
     "react-transition-group": "1.x",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sendsay-api": "^2.4.0",
     "ua-parser-js": "^0.7.21"
