--- a/interface/package.json
+++ b/interface/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.4.1",
     "css-split-webpack-plugin": "^0.2.6",
     "fingerprintjs2": "^2.1.0",
+    "geoip-country": "^4.0.28",
+    "geoip-lite": "^1.4.2",
     "mdbreact": "^4.25.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
