--- a/interface/package.json
+++ b/interface/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-autosuggest": "^10.0.2",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.0",
+    "react-search-bar": "^2.2.0",
     "react-select": "^3.0.8",
     "react-spinners": "^0.8.1",
     "react-tooltip": "^4.1.0",
@@ -39,6 +41,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sendsay-api": "^2.4.0",
+    "suggestion-react-input-search": "^1.4.0",
     "ua-parser-js": "^0.7.21"
   },
   "reactSnap": {
