--- a/interface/package.json
+++ b/interface/package.json
@@ -22,6 +22,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "^10.0.2",
     "react-collapse": "^5.0.1",
+    "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
     "react-lazy-images": "^1.1.0",
