--- a/interface/package.json
+++ b/interface/package.json
@@ -25,6 +25,7 @@
     "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-lazy-images": "^1.1.0",
     "react-localization": "^1.0.15",
     "react-recaptcha-google": "^1.1.1",
