--- a/interface/package.json
+++ b/interface/package.json
@@ -39,6 +39,7 @@
     "react-spinners": "^0.8.1",
     "react-tooltip": "^4.1.0",
     "react-transition-group": "1.x",
+    "react-virtualized": "^9.22.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
