--- a/interface/package.json
+++ b/interface/package.json
@@ -7,6 +7,8 @@
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
