dependencies list changed

--- a/interface/package.json
+++ b/interface/package.json
@@ -1,12 +1,13 @@
 {
   "name": "interface",
-  "version": "0.1.0",
+  "version": "1.0",
   "homepage": "http://pogpvp.com",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.4",
+    "@fortawesome/fontawesome-free": "5.15.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -15,22 +16,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-transition-group": "^4.2.4",
-    "bootstrap": "^4.4.1",
     "css-split-webpack-plugin": "^0.2.6",
-    "fingerprintjs2": "^2.1.0",
-    "geoip-country": "^4.0.28",
-    "geoip-lite": "^1.4.2",
-    "mdbreact": "^4.25.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "^10.0.2",
-    "react-collapse": "^5.0.1",
-    "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.0.5",
-    "react-lazy-images": "^1.1.0",
     "react-localization": "^1.0.15",
     "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.2.0",
@@ -38,18 +31,9 @@
     "react-router-dom": "^5.1.2",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.0",
-    "react-search-bar": "^2.2.0",
-    "react-select": "^3.0.8",
-    "react-spinners": "^0.8.1",
-    "react-tooltip": "^4.1.0",
-    "react-transition-group": "1.x",
-    "react-virtualized": "^9.22.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "sendsay-api": "^2.4.0",
-    "suggestion-react-input-search": "^1.4.0",
-    "ua-parser-js": "^0.7.21"
+    "redux-thunk": "^2.3.0"
   },
   "reactSnap": {
     "sourceMaps": false,
